--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
 python-decouple==3.8
-openai==1.12.0
+openai>=1.30.0
 python-dotenv==1.0.0
 
 # Optional (PostgreSQL). Install only if you switch DATABASES to Postgres:
