--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        cd backend && pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        cd backend && python manage.py test
