--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,4 +28,4 @@ jobs:
         cd backend && pip install -r requirements.txt
     - name: Run Tests
       run: |
-        cd backend && PYTHONPATH=. python manage.py test
+        cd backend && PYTHONPATH=.. python manage.py test
