--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        cd backend && pip install -r requirements.txt
+        cd backend && pip install -r requirements.txt pytest pytest-django pytest-cov
     - name: Run Tests
       run: |
-        cd backend && PYTHONPATH=.. python manage.py test
+        cd backend && pytest --cov=. --cov-report=term
