fixed the pipeline

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,70 @@
-SECRET_KEY=your-secret-key-here
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
-OPENAI_API_KEY=your-openai-api-key-here
-DATABASE_URL=sqlite:///db.sqlite3
+# ============================================
+# BAISoft Product Marketplace - Environment Variables
+# ============================================
 
-# Email Configuration (for user invitations)
+# ----------------- REQUIRED -----------------
+
+# Django Secret Key (generate a strong key for production)
+SECRET_KEY=your-super-secret-key-change-in-production
+
+# Debug mode (set to False in production)
+DEBUG=True
+
+# Allowed hosts (comma-separated)
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# ----------------- DATABASE -----------------
+
+# SQLite (default)
+# DATABASE_URL=sqlite:///db.sqlite3
+
+# PostgreSQL (uncomment and configure for production)
+# DATABASE_URL=postgresql://user:password@localhost:5432/baisoft
+
+# ----------------- AUTHENTICATION -----------------
+
+# JWT Settings
+JWT_SECRET_KEY=your-jwt-secret-key
+JWT_ACCESS_TOKEN_LIFETIME=60
+JWT_REFRESH_TOKEN_LIFETIME=10080
+
+# ----------------- OPENAI -----------------
+
+# OpenAI API Key
+OPENAI_API_KEY=sk-your-openai-api-key
+
+# OpenAI Model (gpt-4o-mini, gpt-4, gpt-3.5-turbo)
+OPENAI_MODEL=gpt-4o-mini
+
+# ----------------- SENTRY (Error Tracking) -----------------
+
+# Sentry DSN (get from sentry.io)
+# SENTRY_DSN=https://xxxxx@sentry.io/xxxxx
+
+# ----------------- EMAIL -----------------
+
+# Email backend (console, smtp, etc.)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+
+# SMTP Configuration (for production)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
-DEFAULT_FROM_EMAIL=noreply@productmarketplace.com
+DEFAULT_FROM_EMAIL=noreply@baisoft.com
+
+# ----------------- PRODUCTION SETTINGS -----------------
+
+# HTTPS (set to True in production)
+SECURE_SSL_REDIRECT=False
+SECURE_PROXY_SSL_HEADER=HTTP_X_FORWARDED_PROTO,https
+
+# Cookie security
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
+
+# ----------------- CACHING -----------------
+
+# Redis URL (for production with Redis)
+# REDIS_URL=redis://localhost:6379/1
