--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,36 @@ python-decouple==3.8
 openai>=1.30.0
 python-dotenv==1.0.0
 
-# Optional (PostgreSQL). Install only if you switch DATABASES to Postgres:
+# ----------------- PRODUCTION ENHANCEMENTS -----------------
+
+# Monitoring & Error Tracking
+sentry-sdk>=1.40.0
+
+# Rate Limiting
+django-ratelimit>=4.1.0
+
+# API Documentation
+drf-spectacular>=0.27.0
+
+# Caching
+django-redis>=5.4.0
+
+# ----------------- TESTING -----------------
+
+pytest>=8.0.0
+pytest-django>=4.8.0
+pytest-cov>=4.1.0
+factory-boy>=3.3.0
+pytest-factoryboy>=2.7.0
+
+# ----------------- CODE QUALITY -----------------
+
+flake8>=7.0.0
+isort>=5.13.0
+black>=24.1.0
+
+# ----------------- OPTIONAL (PostgreSQL) -----------------
+# Install only if you switch DATABASES to Postgres:
 # - Windows + Python 3.13 may require build tools for psycopg2.
 # - Prefer psycopg (psycopg3) binary wheels:
 # psycopg[binary]==3.2.6
