feat: Add Vercel deployment configuration
- Add vercel.json for Python serverless functions
- Create API endpoints for auth, products, and chatbot
- Add requirements-vercel.txt for Python dependencies
- Add deployment guide and environment templates

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,1 +1,5 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
+# Frontend Environment Variables for Vercel Deployment
+# Copy this file to .env.local and fill in your values
+
+# API URL - Update this to your Vercel deployment URL
+NEXT_PUBLIC_API_URL=https://your-project.vercel.app/api
