feat: Complete Vercel deployment configuration
- Fix vercel.json routing for frontend + API
- Add Vercel deployment workflow (vercel.yml)
- Fix api/index.py for Vercel request handling
- Update TODO_VERCEL_DEPLOYMENT.md with deployment checklist

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": null,
+  "framework": "nextjs",
   "builds": [
     {
       "src": "api/index.py",
@@ -14,13 +14,21 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/index.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.py"
     }
   ],
   "env": {
     "PYTHONPATH": "."
+  },
+  "functions": {
+    "api/index.py": {
+      "handler": "index.handler",
+      "runtime": "python3.9",
+      "maxDuration": 60
+    }
+  },
+  "build": {
+    "env": {
+      "NEXT_PUBLIC_API_URL": "@next_public_api_url"
+    }
   }
 }
