--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -10,11 +10,6 @@ on:
   pull_request:
     branches: [main, develop]
 
-# Environment variables
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-
 jobs:
   # ============================================
   # Deploy to Vercel Preview
@@ -23,6 +18,7 @@ jobs:
     name: Deploy Preview
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    environment: preview
 
     steps:
       - name: Checkout code
@@ -54,6 +50,7 @@ jobs:
     name: Deploy Production
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/blackboxai/vercel-deployment')
+    environment: production
 
     steps:
       - name: Checkout code
@@ -77,34 +74,3 @@ jobs:
 
       - name: Deploy to Vercel Production
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-  # ============================================
-  # Deploy API (Python) to Vercel
-  # ============================================
-  deploy-api:
-    name: Deploy API
-    runs-on: ubuntu-latest
-    needs: [deploy-preview, deploy-production]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/blackboxai/vercel-deployment')
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements-vercel.txt
-
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-deployment-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-          working-directory: ./
