--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": "nextjs",
+  "framework": null,
   "builds": [
     {
       "src": "api/index.py",
@@ -18,17 +18,5 @@
   ],
   "env": {
     "PYTHONPATH": "."
-  },
-  "functions": {
-    "api/index.py": {
-      "handler": "index.handler",
-      "runtime": "python3.9",
-      "maxDuration": 60
-    }
-  },
-  "build": {
-    "env": {
-      "NEXT_PUBLIC_API_URL": "@next_public_api_url"
-    }
   }
 }
