--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -2,4 +2,5 @@
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 pythonpath = .
-addopts = --ds=config.settings
+addopts = --ds=config.settings -p no:warnings
+testpaths = .
