--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,16 @@
 services:
   - type: web
     name: baisoft
+    region: oregon
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn config.wsgi
+    startCommand: gunicorn config.wsgi --chdir backend
     envVars:
       - key: PYTHON_VERSION
         value: "3.14.3"
+      - key: SECRET_KEY
+        value: "django-insecure-change-this-in-production"
+      - key: DEBUG
+        value: "False"
+      - key: ALLOWED_HOSTS
+        value: "baisoft.onrender.com"
