--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     region: oregon
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn config.wsgi --chdir backend --bind 0.0.0.0:$PORT
+    startCommand: cd backend && gunicorn config.wsgi --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.14.3"
