--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,18 @@
   "name": "product-marketplace-frontend",
   "version": "0.1.0",
   "private": true,
+  "description": "Next.js frontend for Product Marketplace with role-based access control and AI chatbot",
+  "author": "BAISoft Global",
+  "license": "MIT",
+  
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build", 
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit"
   },
+  
   "dependencies": {
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.5",
@@ -18,6 +24,7 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1"
   },
+  
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
@@ -25,5 +32,20 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
-  }
+  },
+  
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  
+  "keywords": [
+    "nextjs",
+    "react",
+    "typescript",
+    "tailwindcss",
+    "product-marketplace",
+    "role-based-access",
+    "ai-chatbot"
+  ]
 }
